modal height fix on mobile

--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -36,7 +36,7 @@
 		}
 
 		@media screen and (max-width: $sm) {
-			height: 30vh;
+			height: 40vh;
 		}
 	}
 
